--- a/home-manager/status-bars/waybar/config/config
+++ b/home-manager/status-bars/waybar/config/config
@@ -9,7 +9,7 @@
     // "margin-right":25,
     "margin-bottom":-11,
     //"margin-top":5,
-    "modules-left": ["wlr/workspaces"],
+    "modules-left": ["sway/workspaces"],
     "modules-right": ["pulseaudio","backlight","temperature","cpu","clock","battery","tray"],
     "modules-center": ["custom/waybar-mpris"],
 
@@ -43,11 +43,18 @@
             "unlocked": ""
         }
     },
-    "wlr/workspaces": {
+    "sway/workspaces": {
         "format": "{icon}",
-        "format-active": " {icon} ",
-        "on-click": "activate",
         "format-icons":{
+             "1": "1",
+             "2": "2",
+             "3": "3",
+             "4": "4",
+             "5": "5",
+             "6": "6",
+             "7": "7",
+             "8": "8",
+             "9": "9",
              "10":"10"
         }
     },
